--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-colorama
-inquirerpy
-pyfiglet
-argon2
+colorama    # styling
+inquirerpy  # option selection
+pyfiglet    # logo
+argon2-cffi # encryption
+pytest      # testing
