--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-colorama    # styling
-inquirerpy  # option selection
-pyfiglet    # logo
-argon2-cffi # encryption
-pytest      # testing-cffi
-cryptography
+colorama        # styling
+inquirerpy      # option selection
+pyfiglet        # logo
+argon2-cffi     # login encryption
+cryptography    # CSV encryption 
+pytest          # testing
