--- a/.github/workflows/autotest.yml
+++ b/.github/workflows/autotest.yml
@@ -1,5 +1,5 @@
 name: Run Python Tests
-on: [push]
+on: [push, pull_request]
 
 jobs:
   test:
@@ -17,6 +17,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Run tests in testing folder
+        run: pytest testing
 
       - name: Run tests
         run: pytest
