added condition to on-push

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -32,7 +32,7 @@ jobs:
   create-pull-request:
     needs: build
     runs-on: ubuntu-latest
-    if: ${{ success() }}
+    if: ${{ success() && github.ref_name != 'main' }}
     permissions:
       contents: write
       pull-requests: write
