--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ inquirerpy      # option selection
 pyfiglet        # logo
 argon2-cffi     # login encryption
 cryptography    # CSV encryption 
+keyring         # credentials
 pytest          # testing
-keyring
