--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ argon2-cffi     # login encryption
 cryptography    # CSV encryption 
 keyring         # credentials
 pytest          # testing
+pyperclip
